# apo_ucak

./: .gitignore
frontend_software/: index.html  package-lock.json  package.json  vite.config.ts
frontend_software/src/: App.tsx
frontend_software/src/Home/: ConfigUI.tsx  Home.tsx  useGamepadAxes.ts  useGamepads.ts
hardware_impl/: .gitignore  CMakeLists.txt  sdkconfig
hardware_impl/components/http_utils/: CMakeLists.txt  idf_component.yml
hardware_impl/components/http_utils/include/: command.h  wifi_utils.h  ws_utils.h
hardware_impl/components/http_utils/src/: wifi_utils.c  ws_utils.c
hardware_impl/components/lora_networking_lib/: CMakeLists.txt
hardware_impl/components/lora_networking_lib/upstream/: CMakeLists.txt
hardware_impl/components/lora_networking_lib/upstream/include/: network_data_operations.h  packet.h  rx_packet_handler.h
hardware_impl/components/lora_networking_lib/upstream/src/: network_data_operations.c  packet.c  rx_packet_handler.c
hardware_impl/components/lora_networking_lib/upstream/tests/: CMakeLists.txt  test_network_data_operations.c  test_packets.c  test_rx_packet_handler.c
hardware_impl/components/utils/: CMakeLists.txt
hardware_impl/components/utils/include/: spi_utils.h  sx_1278_driver.h  sx_1278_utils.h
hardware_impl/components/utils/src/: spi_utils.c  sx_1278_driver.c  sx_1278_utils.c
hardware_impl/main/: CMakeLists.txt  main.c
lora_network/: .gitignore  CMakeLists.txt
lora_network/include/: packet.h
lora_network/src/: packet.c
lora_network/tests/: test_packets.c
(+23 files in other folders)
